Fixes project card information section spacing

--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,17 @@ iframe{
     height: auto;
     white-space: pre-line;
     overflow: auto;
-    padding-left: 4px;
+    padding-left: 5px;
+}
+
+h3{
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
+p{
+    margin-top: 0;
+    margin-bottom: 5px;
 }
 
 .btn-section{
@@ -140,9 +150,10 @@ iframe{
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    height: auto;
-    justify-content: space-between;
-    padding: 0 3px 3px 0;
+    height: 100px;
+    justify-content: center;
+    padding: 0 3px;
+    gap: 5px;
 }
 
 .project-btn{
@@ -151,7 +162,7 @@ iframe{
     border: none;
     border-radius: 10px;
     color:white;
-    height: 47px;
+    height: 40px;
     width: 110px;
     display: flex;
     justify-content: center;
